k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kylin
  namespace: kylin
  labels:
    app: kylin
spec:
  selector:
    app: kylin
  ports:
  - name: http
    port: 80
    targetPort: 7070
    protocol: TCP
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: kylin
  labels:
    app: postgres
spec:
  selector:
    app: postgres
  ports:
  - name: postgres
    port: 5432
    targetPort: 5432
    protocol: TCP
  type: ClusterIP
